--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "i": "^0.3.6",
+    "lodash.debounce": "^4.0.8",
     "npm": "^6.9.0",
     "react": "^16.8.6",
     "react-debounce-input": "^3.2.0",
