--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^4.1.0",
     "config": "^3.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.20"
