--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.20"
+    "mongoose": "^5.4.20",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
